# MindIE-LLM-doc

./: mkdocs.yml
docs/mkdocs/hooks/: github_admonition.py  list_break.py
docs/zh/: release_notes.md
docs/zh/developer_guide/architecture_design/: MicroBatch.md  MultiLora.md  mtp.md
docs/zh/developer_guide/migration_and_adaptation_guide/: multimodal_understanding_migration_and_adaptation_guide.md
docs/zh/faq/: faq.md
docs/zh/stylesheets/: extra.css
docs/zh/user_guide/: communication_matrix.md
docs/zh/user_guide/feature/: anti_outlier.md  attention_quantization.md  enable_reasoning.md  kv_cache_pool.md  pdmix.md  w4a8_mixed_precision_quantization.md  w8a8.md
docs/zh/user_guide/install/: installation_introduction.md
docs/zh/user_guide/log/: configuring_log_content.md  configuring_log_rotation.md  introduction.md  log_overview.md  log_viewing.md  menu_log.md  (+3 more)
mindie_llm/runtime/tokenizer/: tokenizer_wrapper.py
src/kernels/mie_ops/csrc/sampler/apply_top_k_top_p_custom/: CMakeLists.txt
src/kernels/mie_ops/csrc/sampler/apply_top_k_top_p_custom/op_host/: CMakeLists.txt  apply_top_k_top_p_custom.cpp  apply_top_k_top_p_custom.h  apply_top_k_top_p_custom_def.cpp  apply_top_k_top_p_custom_tiling.cpp  apply_top_k_top_p_custom_tiling.h  error_log.h  sort.h
src/kernels/mie_ops/csrc/sampler/apply_top_k_top_p_custom/op_host/op_api/: aclnn_apply_top_k_top_p_custom.cpp  aclnn_apply_top_k_top_p_custom.h
src/kernels/mie_ops/csrc/sampler/apply_top_k_top_p_custom/op_kernel/: apply_top_k_top_p_custom.cpp  apply_top_k_top_p_custom.h  apply_top_p_custom.h
(+22 files in other folders)
